--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú de Promociones</title>
+    <title>Mi Proyecto - Promociones</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Seleccione una opción:</h1>
-        <button onclick="openMenu('es')">Menú en Español</button>
-        <button onclick="openMenu('pt')">Menú en Portugués</button>
-        <button onclick="openMenu('en')">Menú en Inglés</button>
-        <button onclick="openMenu('ru')">Menú en Ruso</button>
+    <!-- Logo en la esquina superior izquierda -->
+    <div class="logo-container">
+        <img src="logo.png" alt="Logo del Local" class="logo">
+    </div>
+    
+    <!-- Botones de Promociones y Menús -->
+    <div class="button-container">
+        <button class="promo-button">PROMOCIONES</button>
+        <button class="menu-button">MENÚ EN ESPAÑOL</button>
+        <button class="menu-button">MENÚ EN PORTUGUÉS</button>
+        <button class="menu-button">MENÚ EN INGLÉS</button>
+        <button class="menu-button">MENÚ EN RUSO</button>
     </div>
     
     <script src="script.js"></script>
