--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         
         <!-- Botones de Promociones y Menús -->
         <div class="button-container">
-            <button class="promo-button">PROMOCIONES</button>
+            <!-- Modificado para que redirija a promociones.html -->
+            <button class="promo-button" onclick="location.href='promociones.html'">PROMOCIONES</button>
             <button class="menu-button">MENÚ EN ESPAÑOL</button>
             <button class="menu-button">MENÚ EN PORTUGUÉS</button>
             <button class="menu-button">MENÚ EN INGLÉS</button>
