--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="button-container">
             <!-- Modificado para que redirija a promociones.html -->
             <button class="promo-button" onclick="location.href='promociones.html'">PROMOCIONES</button>
-            <button class="menu-button">MENÚ EN ESPAÑOL</button>
+            <!-- Botón para Menú en Español -->
+            <a href="menu-espanol.html" class="menu-button">Menú en Español</a>
             <button class="menu-button">MENÚ EN PORTUGUÉS</button>
             <button class="menu-button">MENÚ EN INGLÉS</button>
             <button class="menu-button">MENÚ EN RUSO</button>
