--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -3,116 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú en Español - Big Pizza</title>
+    <title>Menú Español - Big Pizza</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Menú en Español</h1>
+    <header>
+        <h1>Big Pizza</h1>
+        <div class="buttons-container">
+            <button class="menu-button" onclick="window.location.href='index.html'">Inicio</button>
+            <button class="menu-button" onclick="window.location.href='menu-espanol.html'">Menú Español</button>
+            <button class="menu-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/#promociones'">PROMOCIONES</button>
+        </div>
+    </header>
 
+    <div class="menu-section">
         <!-- Sección de Pizzas -->
-        <section class="menu-section">
-            <h2>Pizzas</h2>
-
-            <!-- ELIGE COMO QUIERES LA MASA -->
-            <div class="masa-section">
-                <h3>ELIGE COMO QUIERES LA MASA</h3>
-                <div class="masa-options">
-                    <div class="masa-option">
-                        <img src="images/piedra.jpg" alt="A la Piedra">
-                        <p>A LA PIEDRA (Masa delgada y crocante)</p>
-                    </div>
-                    <div class="masa-option">
-                        <img src="images/molde.jpg" alt="Al Molde">
-                        <p>AL MOLDE (Masa gruesa y con más queso)</p>
-                    </div>
+        <div class="pizza-section">
+            <h2>ELIGE COMO QUIERES LA MASA</h2>
+            <div class="masa">
+                <div class="masa-option">
+                    <img src="images/piedra.jpg" alt="Masa a la Piedra">
+                    <h3>A LA PIEDRA (Masa delgada y crocante)</h3>
+                </div>
+                <div class="masa-option">
+                    <img src="images/molde.jpg" alt="Masa al Molde">
+                    <h3>AL MOLDE (Masa gruesa y con más queso)</h3>
                 </div>
             </div>
+        </div>
 
-            <!-- Pizzas Especiales -->
-            <div class="menu-list">
-                <h3>PIZZAS ESPECIALES</h3>
-                <ul>
-                    <li>Jamón Y Morrón</li>
-                    <li>Cheddar y Bacon</li>
-                    <li>Napolitana Jamón</li>
-                    <li>Calabresa</li>
-                    <li>Fugazzeta</li>
-                    <li>Jamón con Morrón y Huevo</li>
-                    <li>Fugazzetta con Jamón</li>
-                    <li>Napolitana con Jamón</li>
-                </ul>
-            </div>
+        <!-- Pizzas Especiales -->
+        <div class="pizza-section">
+            <h3>PIZZAS ESPECIALES</h3>
+            <ul>
+                <li>Jamón Y Morrón</li>
+                <li>Cheddar y Bacon</li>
+                <li>Napolitana Jamón</li>
+                <li>Calabresa</li>
+                <li>Fugazzeta</li>
+                <li>Jamón con Morrón y Huevo</li>
+                <li>Fugazzetta con Jamón</li>
+                <li>Napolitana con Jamón</li>
+            </ul>
+        </div>
 
-            <!-- Personalización de Pizzas -->
-            <div class="menu-list">
-                <h3>O personalízala a tu gusto con los ingredientes extras:</h3>
-                <ul>
-                    <li>Huevo</li>
-                    <li>Tomate</li>
-                    <li>Morron</li>
-                    <li>Aceitunas</li>
-                    <li>Extra queso</li>
-                    <li>Jamón</li>
-                    <li>Longaniza</li>
-                    <li>Cheddar</li>
-                    <li>Bacon</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Sección de Empanadas -->
-        <section class="menu-section">
-            <h2>Empanadas</h2>
-            <div class="menu-item">
-                <img src="images/empanada1.jpg" alt="Carne Suave">
-                <p>CARNE SUAVE</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada2.jpg" alt="Jamón y Queso">
-                <p>JAMÓN Y QUESO</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada3.jpg" alt="Carne Picante">
-                <p>CARNE PICANTE</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada4.jpg" alt="Pollo">
-                <p>POLLO</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada5.jpg" alt="Cheeseburger">
-                <p>CHEESEBURGER</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada6.jpg" alt="Cantimpalo">
-                <p>CANTIMPALO</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada7.jpg" alt="Capresse">
-                <p>CAPRESSE</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada8.jpg" alt="Humita">
-                <p>HUMITA</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada9.jpg" alt="Cebolla y Queso">
-                <p>CEBOLLA Y QUESO</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada10.jpg" alt="Brócoli y Champiñones">
-                <p>BRÓCOLI Y CHAMPIÑONES</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada11.jpg" alt="Roquefort y Jamón">
-                <p>ROQUEFORT Y JAMÓN</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/empanada12.jpg" alt="Verdura">
-                <p>VERDURA</p>
-            </div>
-        </section>
+        <!-- Personaliza tu pizza -->
+        <div class="pizza-section">
+            <h3>O personalízala a tu gusto con los ingredientes extras:</h3>
+            <ul>
+                <li>Huevo</li>
+                <li>Tomate</li>
+                <li>Morron</li>
+                <li>Aceitunas</li>
+                <li>Extra queso</li>
+                <li>Jamon</li>
+                <li>Longaniza</li>
+                <li>Cheddar</li>
+                <li>Bacon</li>
+            </ul>
+        </div>
     </div>
+
+    <!-- Sección de Empanadas -->
+    <div class="empanadas-section">
+        <h3>Empanadas</h3>
+        <div class="empanadas-list">
+            <div class="empanada-item">
+                <h4>CARNE SUAVE</h4>
+                <img src="images/empanada1.jpg" alt="Empanada Carne Suave">
+            </div>
+            <div class="empanada-item">
+                <h4>JAMON Y QUESO</h4>
+                <img src="images/empanada2.jpg" alt="Empanada Jamon y Queso">
+            </div>
+            <div class="empanada-item">
+                <h4>CARNE PICANTE</h4>
+                <img src="images/empanada3.jpg" alt="Empanada Carne Picante">
+            </div>
+            <div class="empanada-item">
+                <h4>POLLO</h4>
+                <img src="images/empanada4.jpg" alt="Empanada Pollo">
+            </div>
+            <div class="empanada-item">
+                <h4>CHEESEBURGER</h4>
+                <img src="images/empanada5.jpg" alt="Empanada Cheeseburger">
+            </div>
+            <div class="empanada-item">
+                <h4>CANTIMPALO</h4>
+                <img src="images/empanada6.jpg" alt="Empanada Cantimpalo">
+            </div>
+            <div class="empanada-item">
+                <h4>CAPRESSE</h4>
+                <img src="images/empanada7.jpg" alt="Empanada Capresse">
+            </div>
+            <div class="empanada-item">
+                <h4>HUMITA</h4>
+                <img src="images/empanada8.jpg" alt="Empanada Humita">
+            </div>
+            <div class="empanada-item">
+                <h4>CEBOLLA Y QUESO</h4>
+                <img src="images/empanada9.jpg" alt="Empanada Cebolla y Queso">
+            </div>
+            <div class="empanada-item">
+                <h4>BROCOLI Y CHAMPIÑONES</h4>
+                <img src="images/empanada10.jpg" alt="Empanada Brocoli y Champiñones">
+            </div>
+            <div class="empanada-item">
+                <h4>ROQUEFORT Y JAMON</h4>
+                <img src="images/empanada11.jpg" alt="Empanada Roquefort y Jamon">
+            </div>
+            <div class="empanada-item">
+                <h4>VERDURA</h4>
+                <img src="images/empanada12.jpg" alt="Empanada Verdura">
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Big Pizza | Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
+
