--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Multilingüe</title>
+    <title>Big Pizza - Menú</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <!-- Contenedor principal -->
+    <div class="main-container">
         <!-- Logo centrado -->
-        <img src="images/logo.png" alt="Logo Big Pizza" class="logo">
-        
-        <!-- Título y descripción -->
-        <h1>Disfruta de nuestros deliciosos menús en diferentes idiomas y describe nuestras ofertas exclusivas.</h1>
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Logo Big Pizza" class="logo">
+        </div>
 
-        <!-- Botones de idiomas -->
+        <!-- Título con descripción -->
+        <h1>Disfruta de nuestros deliciosos menús en diferentes idiomas y descubre nuestras ofertas exclusivas.</h1>
+
+        <!-- Botones para los menús -->
         <div class="button-container">
             <button class="menu-button" onclick="openMenu('es')">Menú en Español</button>
-            <button class="menu-button" onclick="openMenu('pt')">Menú en Portugués</button>
+            <button class="menu-button" onclick="openMenu('pt')">Menú em português</button>
             <button class="menu-button" onclick="openMenu('en')">Menu in English</button>
             <button class="menu-button" onclick="openMenu('ru')">Меню на русском</button>
         </div>
 
         <!-- Botón de promociones -->
-        <a href="promociones.html" class="promo-button">PROMOCIONES</a>
+        <div class="promotions-container">
+            <a href="promociones.html" class="promo-button">PROMOCIONES</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
