--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Pizza - Menú</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <!-- Contenedor principal -->
@@ -15,7 +16,7 @@
         </div>
 
         <!-- Título con descripción -->
-        <h1>Disfruta de nuestros deliciosos menús en diferentes idiomas y descubre nuestras ofertas exclusivas.</h1>
+        <h1>Disfruta de nuestros deliciosos menús en diferentes idiomas y describe nuestras ofertas exclusivas.</h1>
 
         <!-- Botones para los menús -->
         <div class="button-container">
@@ -30,7 +31,5 @@
             <a href="promociones.html" class="promo-button">PROMOCIONES</a>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
