--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Pizza</title>
+    <title>Inicio - Big Pizza</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <!-- Logo -->
-        <img src="logo.png" alt="Big Pizza Logo" class="logo">
-
-        <!-- Botones -->
-        <div class="button-container">
+        <img src="images/logo.png" alt="Big Pizza Logo" class="logo">
+        <div class="buttons">
             <button onclick="openPage('promociones.html')">PROMOCIONES</button>
             <button onclick="openPage('menu-espanol.html')">MENÚ EN ESPAÑOL</button>
             <button onclick="openPage('menu-portugues.html')">MENÚ EM PORTUGUÊS</button>
@@ -23,4 +20,3 @@
     </div>
 </body>
 </html>
-
