--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Big Pizza</title>
+    <title>Big Pizza</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <img src="images/logo.png" alt="Big Pizza Logo" class="logo">
+        <img src="logo.png" alt="Big Pizza Logo" class="logo">
         <div class="buttons">
-            <button onclick="openPage('promociones.html')">PROMOCIONES</button>
-            <button onclick="openPage('menu-espanol.html')">MENÚ EN ESPAÑOL</button>
-            <button onclick="openPage('menu-portugues.html')">MENÚ EM PORTUGUÊS</button>
-            <button onclick="openPage('menu-ingles.html')">MENU IN ENGLISH</button>
-            <button onclick="openPage('menu-ruso.html')">МЕНЮ НА РУССКОМ</button>
+            <button onclick="window.location.href='promociones.html'">PROMOCIONES</button>
+            <button onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
+            <button onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
+            <button onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
+            <button onclick="window.location.href='menu-ruso.html'">МЕНЮ НА РУССКОМ</button>
         </div>
     </div>
 </body>
