--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <img src="logo.png" alt="Big Pizza Logo" class="logo">
-        <div class="buttons">
-            <button onclick="window.location.href='promociones.html'">PROMOCIONES</button>
-            <button onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
-            <button onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
-            <button onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
-            <button onclick="window.location.href='menu-ruso.html'">МЕНЮ НА РУССКОМ</button>
+    <div class="main-container">
+        <!-- Contenedor del logo -->
+        <div class="logo-container">
+            <img src="logo.png" alt="Big Pizza Logo" class="logo">
+        </div>
+
+        <!-- Contenedor de botones -->
+        <div class="button-container">
+            <button class="promo-button" onclick="window.location.href='promociones.html'">PROMOCIONES</button>
+            <button class="menu-button" onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
+            <button class="menu-button" onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
+            <button class="menu-button" onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
+            <button class="menu-button" onclick="window.location.href='menu-ruso.html'">МЕНЮ НА РУССКОМ</button>
         </div>
     </div>
 </body>
