--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -34,7 +34,7 @@
         <!-- Pizzas Especiales -->
         <div class="pizza-section">
             <h3>PIZZAS ESPECIALES</h3>
-            <ul>
+            <ul class="no-bullets">
                 <li>Jamón Y Morrón</li>
                 <li>Cheddar y Bacon</li>
                 <li>Napolitana Jamón</li>
@@ -49,7 +49,7 @@
         <!-- Personaliza tu pizza -->
         <div class="pizza-section">
             <h3>O personalízala a tu gusto con los ingredientes extras:</h3>
-            <ul>
+            <ul class="no-bullets">
                 <li>Huevo</li>
                 <li>Tomate</li>
                 <li>Morron</li>
@@ -75,52 +75,12 @@
                 <h4>JAMON Y QUESO</h4>
                 <img src="images/empanada2.jpg" alt="Empanada Jamon y Queso">
             </div>
-            <div class="empanada-item">
-                <h4>CARNE PICANTE</h4>
-                <img src="images/empanada3.jpg" alt="Empanada Carne Picante">
-            </div>
-            <div class="empanada-item">
-                <h4>POLLO</h4>
-                <img src="images/empanada4.jpg" alt="Empanada Pollo">
-            </div>
-            <div class="empanada-item">
-                <h4>CHEESEBURGER</h4>
-                <img src="images/empanada5.jpg" alt="Empanada Cheeseburger">
-            </div>
-            <div class="empanada-item">
-                <h4>CANTIMPALO</h4>
-                <img src="images/empanada6.jpg" alt="Empanada Cantimpalo">
-            </div>
-            <div class="empanada-item">
-                <h4>CAPRESSE</h4>
-                <img src="images/empanada7.jpg" alt="Empanada Capresse">
-            </div>
-            <div class="empanada-item">
-                <h4>HUMITA</h4>
-                <img src="images/empanada8.jpg" alt="Empanada Humita">
-            </div>
-            <div class="empanada-item">
-                <h4>CEBOLLA Y QUESO</h4>
-                <img src="images/empanada9.jpg" alt="Empanada Cebolla y Queso">
-            </div>
-            <div class="empanada-item">
-                <h4>BROCOLI Y CHAMPIÑONES</h4>
-                <img src="images/empanada10.jpg" alt="Empanada Brocoli y Champiñones">
-            </div>
-            <div class="empanada-item">
-                <h4>ROQUEFORT Y JAMON</h4>
-                <img src="images/empanada11.jpg" alt="Empanada Roquefort y Jamon">
-            </div>
-            <div class="empanada-item">
-                <h4>VERDURA</h4>
-                <img src="images/empanada12.jpg" alt="Empanada Verdura">
-            </div>
+            <!-- Repite los demás items de la misma manera -->
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 Big Pizza | Todos los derechos reservados</p>
+        <p>&copy; 2024 Servicios Madeirense | Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
-
