--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -10,23 +10,24 @@
     <header>
         <h1>Big Pizza</h1>
         <div class="buttons-container">
-            <button class="menu-button" onclick="window.location.href='index.html'">Inicio</button>
-            <button class="menu-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/#promociones'">PROMOCIONES</button>
+            <button class="home-button" onclick="window.location.href='index.html'">Inicio</button>
+            <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOCIONES</button>
         </div>
     </header>
 
     <!-- Sección de Pizzas -->
     <div class="menu-section">
         <div class="pizza-section">
+            <h1>PIZZAS</h1>
             <h2>ELIGE COMO QUIERES LA MASA</h2>
             <div class="masa">
                 <div class="masa-option">
                     <img src="images/piedra.jpg" alt="Masa a la Piedra">
-                    <h3>A LA PIEDRA (Masa delgada y crocante)</h3>
+                    <h3>A LA PIEDRA (Masa delgada y Crocante)</h3>
                 </div>
                 <div class="masa-option">
                     <img src="images/molde.jpg" alt="Masa al Molde">
-                    <h3>AL MOLDE (Masa gruesa y con más queso)</h3>
+                    <h3>AL MOLDE (Masa gruesa y con MAS queso)</h3>
                 </div>
             </div>
         </div>
@@ -48,7 +49,7 @@
 
         <!-- Personaliza tu pizza -->
         <div class="pizza-section">
-            <h3>O personalízala a tu gusto con los ingredientes extras:</h3>
+            <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
             <ul class="no-bullets">
                 <li>Huevo</li>
                 <li>Tomate</li>
@@ -65,7 +66,7 @@
 
     <!-- Sección de Empanadas -->
     <div class="empanadas-section">
-        <h3>Empanadas</h3>
+        <h1>EMPANADAS</h1>
         <div class="empanadas-list">
             <div class="empanada-item">
                 <h4>CARNE SUAVE</h4>
@@ -75,46 +76,7 @@
                 <h4>JAMON Y QUESO</h4>
                 <img src="images/empanada2.jpg" alt="Empanada Jamon y Queso">
             </div>
-            <div class="empanada-item">
-                <h4>CARNE PICANTE</h4>
-                <img src="images/empanada3.jpg" alt="Empanada Carne Picante">
-            </div>
-            <div class="empanada-item">
-                <h4>POLLO</h4>
-                <img src="images/empanada4.jpg" alt="Empanada Pollo">
-            </div>
-            <div class="empanada-item">
-                <h4>CHEESEBURGER</h4>
-                <img src="images/empanada5.jpg" alt="Empanada Cheeseburger">
-            </div>
-            <div class="empanada-item">
-                <h4>CANTIMPALO</h4>
-                <img src="images/empanada6.jpg" alt="Empanada Cantimpalo">
-            </div>
-            <div class="empanada-item">
-                <h4>CAPRESSE</h4>
-                <img src="images/empanada7.jpg" alt="Empanada Capresse">
-            </div>
-            <div class="empanada-item">
-                <h4>HUMITA</h4>
-                <img src="images/empanada8.jpg" alt="Empanada Humita">
-            </div>
-            <div class="empanada-item">
-                <h4>CEBOLLA Y QUESO</h4>
-                <img src="images/empanada9.jpg" alt="Empanada Cebolla y Queso">
-            </div>
-            <div class="empanada-item">
-                <h4>BROCOLI Y CHAMPIÑONES</h4>
-                <img src="images/empanada10.jpg" alt="Empanada Brocoli y Champiñones">
-            </div>
-            <div class="empanada-item">
-                <h4>ROQUEFORT Y JAMON</h4>
-                <img src="images/empanada11.jpg" alt="Empanada Roquefort y Jamon">
-            </div>
-            <div class="empanada-item">
-                <h4>VERDURA</h4>
-                <img src="images/empanada12.jpg" alt="Empanada Verdura">
-            </div>
+            <!-- Resto de las empanadas -->
         </div>
     </div>
 
@@ -124,4 +86,3 @@
 
 </body>
 </html>
-
