--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Big Pizza</h1>
+        <div class="logo-container">
+            <img src="logo.png" alt="Big Pizza Logo" class="logo">
+        </div>
+        
         <div class="buttons-container">
             <button class="home-button" onclick="window.location.href='index.html'">Inicio</button>
             <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOCIONES</button>
@@ -76,7 +79,46 @@
                 <h4>JAMON Y QUESO</h4>
                 <img src="images/empanada2.jpg" alt="Empanada Jamon y Queso">
             </div>
-            <!-- Resto de las empanadas -->
+            <div class="empanada-item">
+                <h4>CARNE PICANTE</h4>
+                <img src="images/empanada3.jpg" alt="Empanada Carne Picante">
+            </div>
+            <div class="empanada-item">
+                <h4>POLLO</h4>
+                <img src="images/empanada4.jpg" alt="Empanada Pollo">
+            </div>
+            <div class="empanada-item">
+                <h4>CHEESEBURGER</h4>
+                <img src="images/empanada5.jpg" alt="Empanada Cheeseburger">
+            </div>
+            <div class="empanada-item">
+                <h4>CANTIMPALO</h4>
+                <img src="images/empanada6.jpg" alt="Empanada Cantimpalo">
+            </div>
+            <div class="empanada-item">
+                <h4>CAPRESSE</h4>
+                <img src="images/empanada7.jpg" alt="Empanada Capresse">
+            </div>
+            <div class="empanada-item">
+                <h4>HUMITA</h4>
+                <img src="images/empanada8.jpg" alt="Empanada Humita">
+            </div>
+            <div class="empanada-item">
+                <h4>CEBOLLA Y QUESO</h4>
+                <img src="images/empanada9.jpg" alt="Empanada Cebolla y Queso">
+            </div>
+            <div class="empanada-item">
+                <h4>BROCOLI Y CHAMPIÑONES</h4>
+                <img src="images/empanada10.jpg" alt="Empanada Brocoli y Champiñones">
+            </div>
+            <div class="empanada-item">
+                <h4>ROQUEFORT Y JAMON</h4>
+                <img src="images/empanada11.jpg" alt="Empanada Roquefort y Jamon">
+            </div>
+            <div class="empanada-item">
+                <h4>VERDURA</h4>
+                <img src="images/empanada12.jpg" alt="Empanada Verdura">
+            </div>
         </div>
     </div>
 
