--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -20,6 +20,7 @@
 
     <!-- Sección de Pizzas -->
     <div class="menu-section">
+        <!-- Sección Pizzas (izquierda) -->
         <div class="pizza-section">
             <h1>PIZZAS</h1>
             <h2>ELIGE COMO QUIERES LA MASA</h2>
@@ -35,35 +36,36 @@
             </div>
         </div>
 
-        <!-- Pizzas Especiales -->
-        <div class="pizza-section">
-            <h3>PIZZAS ESPECIALES</h3>
-            <ul class="no-bullets">
-                <li>Jamón Y Morrón</li>
-                <li>Cheddar y Bacon</li>
-                <li>Napolitana Jamón</li>
-                <li>Calabresa</li>
-                <li>Fugazzeta</li>
-                <li>Jamón con Morrón y Huevo</li>
-                <li>Fugazzetta con Jamón</li>
-                <li>Napolitana con Jamón</li>
-            </ul>
-        </div>
+        <!-- Sección de Pizzas Especiales y Personaliza tu Pizza (derecha) -->
+        <div class="right-side">
+            <div class="pizza-specials-section">
+                <h3>PIZZAS ESPECIALES</h3>
+                <ul class="no-bullets">
+                    <li>Jamón Y Morrón</li>
+                    <li>Cheddar y Bacon</li>
+                    <li>Napolitana Jamón</li>
+                    <li>Calabresa</li>
+                    <li>Fugazzeta</li>
+                    <li>Jamón con Morrón y Huevo</li>
+                    <li>Fugazzetta con Jamón</li>
+                    <li>Napolitana con Jamón</li>
+                </ul>
+            </div>
 
-        <!-- Personaliza tu pizza -->
-        <div class="pizza-section">
-            <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
-            <ul class="no-bullets">
-                <li>Huevo</li>
-                <li>Tomate</li>
-                <li>Morron</li>
-                <li>Aceitunas</li>
-                <li>Extra queso</li>
-                <li>Jamon</li>
-                <li>Longaniza</li>
-                <li>Cheddar</li>
-                <li>Bacon</li>
-            </ul>
+            <div class="pizza-customize-section">
+                <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
+                <ul class="no-bullets">
+                    <li>Huevo</li>
+                    <li>Tomate</li>
+                    <li>Morron</li>
+                    <li>Aceitunas</li>
+                    <li>Extra queso</li>
+                    <li>Jamon</li>
+                    <li>Longaniza</li>
+                    <li>Cheddar</li>
+                    <li>Bacon</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -103,28 +105,11 @@
                 <h4>HUMITA</h4>
                 <img src="images/empanada8.jpg" alt="Empanada Humita">
             </div>
-            <div class="empanada-item">
-                <h4>CEBOLLA Y QUESO</h4>
-                <img src="images/empanada9.jpg" alt="Empanada Cebolla y Queso">
-            </div>
-            <div class="empanada-item">
-                <h4>BROCOLI Y CHAMPIÑONES</h4>
-                <img src="images/empanada10.jpg" alt="Empanada Brocoli y Champiñones">
-            </div>
-            <div class="empanada-item">
-                <h4>ROQUEFORT Y JAMON</h4>
-                <img src="images/empanada11.jpg" alt="Empanada Roquefort y Jamon">
-            </div>
-            <div class="empanada-item">
-                <h4>VERDURA</h4>
-                <img src="images/empanada12.jpg" alt="Empanada Verdura">
-            </div>
         </div>
     </div>
 
     <footer>
         <p>&copy; 2024 Servicios Madeirense | Todos los derechos reservados</p>
     </footer>
-
 </body>
 </html>
