--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -20,9 +20,8 @@
 
     <!-- Sección de Pizzas -->
     <div class="menu-section">
-        <!-- Sección Pizzas (izquierda) -->
+        <div class="section-title" id="pizzas-title">PIZZAS</div>
         <div class="pizza-section">
-            <h1>PIZZAS</h1>
             <h2>ELIGE COMO QUIERES LA MASA</h2>
             <div class="masa">
                 <div class="masa-option">
@@ -35,8 +34,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Sección de Pizzas Especiales y Personaliza tu Pizza (derecha) -->
         <div class="right-side">
             <div class="pizza-specials-section">
                 <div class="orange-box">
@@ -75,7 +72,7 @@
 
     <!-- Sección de Empanadas -->
     <div class="empanadas-section">
-        <h1>EMPANADAS</h1>
+        <div class="section-title" id="empanadas-title">EMPANADAS</div>
         <div class="empanadas-list">
             <div class="empanada-item">
                 <h4>CARNE SUAVE</h4>
