--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -75,12 +75,12 @@
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Jamón Y Morrón</li>
                         <li>Cheddar y Bacon</li>
-                        <li>Napolitana Jamón</li>
+                        <li>Napolitana con Jamón (tomate y ajo)</li>
                         <li>Calabresa</li>
                         <li>Fugazzeta</li>
                         <li>Jamón con Morrón y Huevo</li>
                         <li>Fugazzetta con Jamón</li>
-                        <li>Napolitana con Jamón</li>
+                        <li>Jamón con Morron</li>
                     </ul>
                 </div>
             </div>
